# mxb-app

./: .env.dev  .env.production  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
scripts/: free-dev-port.mjs  map-mxbikes.js  map-mxbikes.mjs
src/: App.js  App.scss  App.tsx  index.css  index.scss  main.tsx  theme.js  theme.ts
src-tauri/: .config.json  .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bikeswap.rs  bundle.rs  cfg.rs  config.rs  configy.rs  edf.rs  frostmod.rs  frostmod_manage.rs  gameproc.rs  install.rs  library.rs  main.rs  modelswap.rs  modwatch.rs  paint.rs  pkz.rs  presets.rs  shop_session.rs  soundmods.rs  upload.rs
src-tauri/src/fixtures/: test_paint.pnt
src-tauri/src/mods/: mod.rs  mxb.rs  mxbshop.rs
src-tauri/tests/: pkz_real.rs
src/Components/: ErrorBoundary.tsx
src/Components/Browse/: Browse.scss  Browse.tsx  ModCard.tsx
src/Components/Dashboard/: Dashboard.js  Dashboard.scss  Dashboard.tsx
src/Components/Footer/: Footer.js  Footer.scss  Footer.tsx
src/Components/Header/: Header.js  Header.scss  Header.tsx
src/Components/Locker/: Locker.tsx  LockerScene.tsx  LooseSwapPrompt.tsx  RegisterSwapsDialog.tsx  bikeModel.tsx  liveries.ts
src/Components/LoginPage/: LoginPage.js  LoginPage.scss  LoginPage.tsx
src/Components/ModDetail/: InstallDialog.tsx  ModDetail.scss  ModDetail.tsx
src/Components/Presets/: Presets.tsx  SlotField.tsx
src/Components/Rider/: RiderStudio.tsx
src/Components/Settings/: Settings.tsx
src/Components/Setup/: Setup.tsx
src/Components/Shell/: Sidebar.tsx
src/Components/Shop/: Shop.tsx
src/Components/TitleBar/: TitleBar.js  TitleBar.scss  TitleBar.tsx
src/Components/UpdateBanner/: UpdateBanner.tsx
src/Components/Viewer/: ModelViewer.tsx  ViewerDialog.tsx  ViewerPanel.tsx  entryViewer.ts
src/Components/Welcome/: Welcome.tsx
src/Components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  segmented.tsx  select.tsx  skeleton.tsx  sonner.tsx  switch.tsx  tooltip.tsx
src/Context/: Config.js  Config.ts  Frostmod.tsx  FrostmodContext.ts  Install.tsx  Theme.tsx  Update.tsx
src/api/: mods.ts
src/lib/: mods.ts  presets.ts  updater.ts
src/types/: index.ts
