[package]
name = "frost"
version = "0.1.0"
description = "Frost — MX Bikes mod manager"
authors = ["Frost"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# Self-update: check GitHub Releases, download + install, then relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Launch on login (Discord-style always-on companion).
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0.0"
walkdir = "2"
# rustls: consistent modern TLS across platforms (native SChannel failed on
# Windows). Note: MediaFire's download CDN blocks all non-browser TLS clients,
# so MediaFire falls back to browser download + local import.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
    "cookies",
] }
tokio = { version = "1", features = ["time"] }
futures-util = "0.3"
scraper = "0.20"
regex = "1"
html-escape = "0.2"
zip = "2"
sevenz-rust = "0.6"
unrar = "0.5"
anyhow = "1"
# Move uninstalled mods to the OS Recycle Bin / Trash rather than deleting outright.
trash = "5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
