[package]
name = "frost"
version = "0.1.6"
description = "Frost — MX Bikes mod manager"
authors = ["Frost"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# Self-update: check GitHub Releases, download + install, then relaunch.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Launch on login (Discord-style always-on companion).
tauri-plugin-autostart = "2"
# File logging to the app log dir (Windows: %LOCALAPPDATA%\com.frost.mxbikes\logs).
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0.0"
walkdir = "2"
# rustls: consistent modern TLS across platforms (native SChannel failed on
# Windows). MediaFire downloads work directly with this client — its CDN no
# longer blocks the rustls fingerprint (verified against a live 427 MB .pkz).
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
    "json",
    "cookies",
] }
tokio = { version = "1", features = ["time"] }
futures-util = { version = "0.3", features = ["io"] }
# Pure-Rust MEGA API client (built on reqwest): downloads + decrypts public
# shared links in-app, so end users don't need the megatools/MEGAcmd binary.
mega = "0.8"
scraper = "0.20"
regex = "1"
html-escape = "0.2"
zip = "2"
sevenz-rust = "0.6"
unrar = "0.5"
# Raw DEFLATE (wbits -15) for MX Bikes `.pnt` paint textures and the encrypted
# `.pkz` entry payloads — both store zlib-less deflate streams.
flate2 = "1"
# Decode + downscale in-archive track/bike preview images (TGA/PNG/JPEG/BMP)
# into small PNG thumbnails for the library cards.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "tga",
    "bmp",
] }
# Encode PNG thumbnails as `data:` URIs (no asset-protocol wiring needed).
base64 = "0.22"
anyhow = "1"
# Move uninstalled mods to the OS Recycle Bin / Trash rather than deleting outright.
trash = "5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
